--- a/CurrencyLink/CurrencyLink/CurrencyLink/CurrencyLink.csproj
+++ b/CurrencyLink/CurrencyLink/CurrencyLink/CurrencyLink.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
